attrs: Remove special-casing postscript template
Just spell out postscript in the source

--- a/doc/infosrc/templates/attrs.html.j2
+++ b/doc/infosrc/templates/attrs.html.j2
@@ -115,9 +115,7 @@ of the layout programs.
     not dot
   {%- else -%}
     {%- for flag in attr.flags | reverse -%}
-      {%- if flag == 'ps' -%}
-        postscript
-      {%- elif flag == 'bitmap' -%}
+      {%- if flag == 'bitmap' -%}
         bitmap output
       {%- else -%}
         {{ flag }}
