attrs.html: Rename attr.uses to used_by
Matches table header.

Makes more sense when you're looking at an attribute definition

--- a/doc/infosrc/templates/attrs.html.j2
+++ b/doc/infosrc/templates/attrs.html.j2
@@ -92,7 +92,7 @@ of the layout programs.
 {% for attr in attrs %}
 <TR>
   <TD><A ID="{{ attr.a_anchor }}" HREF="#{{ attr.d_anchor }}">{{ attr.name }}</A></TD>
-  <TD>{{ attr.uses }}</TD>
+  <TD>{{ attr.used_by }}</TD>
   <TD>
   {%- for kind in attr.kinds -%}
     {%- if not loop.first -%}
