Combine `orientation` attr for graphs and nodes
This simplifies the generation quite a lot, gets rid of the duplicated
anchors for differently-named.

Removes a little confusion too, in my opinion.

It's not perfect: they have different datatypes.

--- a/doc/infosrc/templates/attrs.html.j2
+++ b/doc/infosrc/templates/attrs.html.j2
@@ -91,7 +91,7 @@ of the layout programs.
 </TR>
 {% for attr in attrs %}
 <TR>
-  <TD><A ID="{{ attr.a_anchor }}" HREF="#{{ attr.d_anchor }}">{{ attr.name }}</A></TD>
+  <TD><A ID="a:{{ attr.name }}" HREF="#d:{{ attr.name }}">{{ attr.name }}</A></TD>
   <TD>{{ attr.used_by }}</TD>
   <TD>
   {%- for type in attr.types -%}
@@ -135,7 +135,7 @@ of the layout programs.
 <H1>Attribute Descriptions</H1>
 <DL>
 {% for attr in attrs %}
-<DT><A ID="{{attr.d_anchor}}" HREF="#{{attr.a_anchor}}"><STRONG>{{ attr.name }}</STRONG></A>
+<DT><A ID="d:{{attr.name}}" HREF="#a:{{attr.name}}"><STRONG>{{ attr.name }}</STRONG></A>
 <DD>{{ attr.html_description }}
 {% endfor %}
 </DL>
