Move arrows.html generation into jinja2 templates.
In preparation for moving this to Jekyll repo.

--- a/doc/infosrc/templates/arrows.html.j2
+++ b/doc/infosrc/templates/arrows.html.j2
@@ -1,3 +1,23 @@
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<!--
+    This is a generated document.  Do not edit.
+-->
+<HTML VERSION="2.0">
+<HEAD>
+<TITLE>Arrow Shapes</TITLE>
+</HEAD>
+<BODY BGCOLOR=white>
+<A NAME="top"></A>
+<H1 ALIGN=CENTER>Arrow Shapes</H1>
+<HR>
+Arrow shapes can be specified and named using the following simple
+grammar. 
+Terminals are shown in bold font and nonterminals in italics.
+Literal characters are given in single quotes.
+Square brackets [ and ] enclose optional items.
+Vertical bars | separate alternatives.
+<TABLE>
+{{ arrow_grammar }}
 </TABLE>
 <P>
 The primitive shapes are:
@@ -85,3 +105,11 @@ The following display contains the 42 combinations possible with a single
 arrow shape. The node attached to the arrow is not drawn but would appear
 on the right side of the edge.
 <P>
+<CENTER>
+<TABLE>
+{{ arrow_table }}
+</TABLE>
+</CENTER>
+</BODY>
+</HTML>
+
